--- a/views/getData.jade
+++ b/views/getData.jade
@@ -2,7 +2,9 @@ html
   head
     include ./partials/head.jade
   body
-  .main
-    .row
-      .col-md-4.col-sm-6.col-xs-12.col-md-offset-4
-        img(src= "uploads/#{image}")
+    .maino
+      include ./partials/header.jade
+      .row
+        .col-md-6.col-sm-12.col-xs-12.col-md-offset-3.row-centered
+          a(href="/photo")
+            img(src= "uploads/#{image}", align="middle")
