--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,12 @@
 html
 	include ./partials/head.jade
 	body
-		.main
+		.maino
+			include ./partials/header.jade
 			.row
-				.col-md-4.col-sm-6.col-xs-12.col-md-offset-4
+				.col-md-6.col-sm-12.col-xs-12.col-md-offset-3.col-centered
 					form(method="post",enctype="multipart/form-data",action="/api/photo")
-						.row.btn.btn-default.btn-file
-							input(type="file",name="userPhoto", accept="image/*",multiple="multiple").form-control
+						.row
+							input(type="file",name="userPhoto", accept="image/*",multiple="multiple").form-control.btn.btn-default.btn-file
 						.row
 							input(type="submit").btn.btn-primary
